--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 node_modules/
-build/
+build/node_modules
+build/bundle.js
+build/npm-debug.log
+build/omnistream4.zip
+build/sample6
+build/omnistream
